Replace the w3schools test with a file url

--- a/t/data/elements.html
+++ b/t/data/elements.html
@@ -19,9 +19,11 @@
       <button class="remove">Remove custom-square from DOM</button>
     </span>
 
+    <iframe src="iframe.html" height="200" width="300" name="iframe"></iframe>
     <script>
 <!--
 // Create a class for the element
+
 class Square extends HTMLElement {
   // Specify observed attributes so that
   // attributeChangedCallback will work
