--- a/t/data/elements.html
+++ b/t/data/elements.html
@@ -38,9 +38,26 @@ class Square extends HTMLElement {
     const shadow = this.attachShadow({mode: 'open'});
 
     const div = document.createElement('div');
+    div.setAttribute('id', 'outer-div');
+    div.setAttribute('title', 'In the Shadow Realms');
+    div.setAttribute('class', 'outer-div-class');
     const style = document.createElement('style');
     shadow.appendChild(style);
     shadow.appendChild(div);
+    const meta = document.createElement('meta');
+    meta.setAttribute('name', 'meta-name');
+    meta.setAttribute('title', 'Very META');
+    shadow.appendChild(meta);
+    const span1 = document.createElement('span');
+    shadow.appendChild(span1);
+    const span2 = document.createElement('span');
+    shadow.appendChild(span2);
+    const link = document.createElement('a');
+    link.setAttribute('href', 'https://metacpan.org');
+    const innerText = document.createTextNode('MetaCPAN');
+    link.appendChild(innerText);
+    shadow.appendChild(link);
+
   }
 
   connectedCallback() {
