Adding WebFrame and WebWindow support

--- a/t/data/elements.html
+++ b/t/data/elements.html
@@ -20,6 +20,7 @@
     </span>
 
     <iframe src="iframe.html" height="200" width="300" name="iframe"></iframe>
+    <iframe src="iframe.html" height="200" width="300" name="iframe2"></iframe>
     <script>
 <!--
 // Create a class for the element
